Fix profile username preservation bug in image upload handlers
- Add missing username field to updateData object in handleImageUpload
- Prioritize username over display_name in displayProfile function
- Ensure username is preserved when uploading profile pictures/banners
- Fix 'anonymous' username bug caused by incomplete profile data merge

--- a/public/profile/index.html
+++ b/public/profile/index.html
@@ -435,9 +435,7 @@
   </div>
 </div>
 
-<!-- JavaScript -->
-<script src="/Dyo-s-Dubious-Domain/assets/js/profile.js"></script>
-<script src="/Dyo-s-Dubious-Domain/assets/js/friends.js"></script>
+<!-- JavaScript handled by base.njk template -->
     </main>
      <div class="footer-divider"></div>
 <footer class="site-footer">
