Add cache busting parameter to interaction checker script

--- a/public/dyos-domain/interaction-checker/index.html
+++ b/public/dyos-domain/interaction-checker/index.html
@@ -578,7 +578,7 @@
 
 
 
-<script src="/Dyo-s-Dubious-Domain/assets/js/interaction-checker.js"></script>
+<script src="/Dyo-s-Dubious-Domain/assets/js/interaction-checker.js?v=2"></script>
     </main>
      <div class="footer-divider"></div>
 <footer class="site-footer">
